# pyRofex

./: pyproject.toml
src/pyRofex/: service.py
src/pyRofex/clients/: rest_rfx.py
src/pyRofex/components/: enums.py  urls.py
